added new models

--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -3173,19 +3173,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Response: Loneliness can be a difficult emotion to navigate, but it's important to remember that you're not alone. We can explore ways to connect with others, such as joining a social group, volunteering, or reaching out to friends and family. It's also important to prioritize self-care and develop a fulfilling personal life.\n"
+      "Predicted Response: It's great that you recognize your self-esteem is low. Let's work together to identify possible reasons behind it and develop strategies to rebuild your self-worth. Would you be open to exploring techniques like cognitive behavioral therapy or perhaps practicing self-affirmations and positive self-talk?\n"
      ]
     }
    ],
    "source": [
     "def predict_response(input_text, model, tokenizer):\n",
+    "    model.eval()  # Set the model to evaluation mode\n",
     "    # Preprocess and tokenize the input text\n",
     "    encoded_input = tokenizer.encode_plus(\n",
     "        input_text,\n",
@@ -3213,7 +3214,7 @@
     "\n",
     "# Example usage\n",
     "model = model.to('cuda' if torch.cuda.is_available() else 'cpu')  # Make sure the model is on the right device\n",
-    "input_text = \"i want to die\"\n",
+    "input_text = \"im sad\"\n",
     "response = predict_response(input_text, model, tokenizer)\n",
     "print(\"Predicted Response:\", response)"
    ]
