--- a/bert_sent_analysis.ipynb
+++ b/bert_sent_analysis.ipynb
@@ -53,7 +53,7 @@
     }
    ],
    "source": [
-    "!pip install tf-keras"
+    "%pip install tf-keras"
    ]
   },
   {
@@ -387,27 +387,35 @@
     "    print(f\"\\n Original input sentence: {test_tweet}\")\n",
     "    test_tweet = text_preprocessing(test_tweet)\n",
     "    tokenized_tweet = tokenize(test_tweet)\n",
-    "    \n",
+    "\n",
     "    print(f\"\\n Pre-processed input sentence: {test_tweet}\")\n",
     "    #print(f\"\\nSentence converted into tokens:\\n{tokenized_tweet}\")\n",
-    "    \n",
-    "    padded_tweet = pad_features(tokenized_tweet, 50)\n",
-    "    feature_tensor = torch.from_numpy(padded_tweet)\n",
-    "    batch_size = feature_tensor.size(0)\n",
-    "    \n",
-    "    if gpu_available:\n",
-    "        feature_tensor = feature_tensor.cuda()\n",
-    "    \n",
-    "    h = net.init_hidden(batch_size)\n",
-    "    output, h = net(feature_tensor, h)\n",
-    "    \n",
-    "    predicted_sentiment = torch.round(output.squeeze())\n",
-    "    \n",
-    "    if predicted_sentiment == 1:\n",
-    "        print(\"\\n Sentiment: Positive\")\n",
-    "        \n",
-    "    else:\n",
-    "        print(\"\\n Sentiment: Negative\")"
+    "\n",
+    "    results = {\"Original\": [], \"Processed\": [], \"Sentiment\": []}\n",
+    "    word_collection = {\"Positive\": [], \"Negative\": []}\n",
+    "\n",
+    "    for tweets in test_tweet:\n",
+    "        original_tweet = tweets\n",
+    "        processed_tweet = text_preprocessing(tweets) \n",
+    "        tokenized_tweet = tokenize(processed_tweet) \n",
+    "        padded_tweet = pad_features(tokenized_tweet, seq_length)\n",
+    "        feature_tensor = torch.from_numpy(padded_tweet)\n",
+    "\n",
+    "        if gpu_available:\n",
+    "            feature_tensor = feature_tensor.cuda()\n",
+    "\n",
+    "        batch_size = feature_tensor.size(0)\n",
+    "        h = net.init_hidden(batch_size)\n",
+    "        output, h = net(feature_tensor, h)\n",
+    "        predicted_sentiment = torch.round(output.squeeze())\n",
+    "\n",
+    "        sentiment = \"Positive\" if predicted_sentiment.item() == 1 else \"Negative\"\n",
+    "        results[\"Original\"].append(original_tweet)\n",
+    "        results[\"Processed\"].append(processed_tweet)\n",
+    "        results[\"Sentiment\"].append(sentiment)\n",
+    "        word_collection[sentiment].extend(processed_tweet) \n",
+    "\n",
+    "    return results, word_collection"
    ]
   },
   {
@@ -748,7 +756,8 @@
     }
    ],
    "source": [
-    "# Train the Neural Network\n",
+    "import matplotlib.pyplot as plt\n",
+    "#Train the Neural Network\n",
     "test_losses = []\n",
     "num_correct = 0\n",
     "\n",
@@ -757,14 +766,14 @@
     "\n",
     "for inputs, labels in test_loader:\n",
     "    h = tuple([each.data for each in h])\n",
-    "    \n",
+    "\n",
     "    if gpu_available:\n",
     "        inputs, labels = inputs.cuda(), labels.cuda()\n",
-    "    \n",
+    "\n",
     "    outputs, h = net(inputs, h)\n",
     "    test_loss = criterion(outputs.float(), labels.float())\n",
     "    test_losses.append(test_loss.item())\n",
-    "    \n",
+    "\n",
     "    pred = torch.round(outputs.squeeze())\n",
     "    correct_tensor = pred.eq(labels.float().view_as(pred))\n",
     "    correct = np.squeeze(correct_tensor.numpy()) if not gpu_available else np.squeeze(correct_tensor.cpu().numpy())\n",
@@ -774,56 +783,87 @@
     "test_acc = num_correct/len(test_loader.dataset)\n",
     "\n",
     "print(\"Average Test Loss: {:.4f}\".format(np.mean(test_losses)))\n",
-    "print(\"Average Test Accuracy: {:.4f}\".format(test_acc))"
+    "print(\"Average Test Accuracy: {:.4f}\".format(test_acc))\n",
+    "\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.plot(test_losses, label='Test Loss', color='blue')\n",
+    "plt.title('Test Loss Per Batch')\n",
+    "plt.xlabel('Batch Number')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(1, 5))\n",
+    "plt.bar('Test Accuracy', test_acc, color='green')\n",
+    "plt.title('Overall Test Accuracy')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.ylim(0, 1)\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Neural Sentiment Analysis of COVID-19 Tweets with Deep LSTM\n",
-      "\n",
-      "------Available Options------\n",
-      "1. Inference on Sample Tweets\n",
-      "2. Enter Custom Tweets/Sentences\n",
-      "3. Exit\n",
-      "\n",
-      "Please select an option from the above:\n",
-      "\n",
-      "--------------------------------------------------------------------------------------\n",
-      "\n",
-      " Original input sentence: Many lost their jobs because of covid and it is highly dangerous\n",
-      "\n",
-      " Pre-processed input sentence: ['many', 'lost', 'jobs', 'covid', 'highly', 'dangerous']\n",
-      "\n",
-      " Sentiment: Negative\n",
-      "\n",
-      "--------------------------------------------------------------------------------------\n",
-      "\n",
-      " Original input sentence: I am happy that my family members are safe in this tough times\n",
-      "\n",
-      " Pre-processed input sentence: ['happy', 'family', 'members', 'safe', 'tough', 'times']\n",
-      "\n",
-      " Sentiment: Positive\n"
+      "^C\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "'\\nwhile(True):\\n    choice = int(input())\\n\\n    if choice == 1:\\n        sample_1 = \\'Many lost their jobs because of covid and it is highly dangerous\\'\\n        sentiment(net, sample_1)\\n    \\n        sample_2 = \\'I am happy that my family members are safe in this tough times\\'\\n        sentiment(net, sample_2)\\n    \\n    elif choice == 2:\\n        print(\"\\nPlease enter a sentence/tweet:\")\\n        user_input = input()\\n        sentiment(net, user_input)\\n    \\n    elif choice == 3:\\n        print(\"\\nExiting...\")\\n        break\\n        \\n'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'wordcloud'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      2\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpip\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124minstall wordcloud\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mwordcloud\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m WordCloud\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Driver program\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNeural Sentiment Analysis of COVID-19 Tweets with Deep LSTM\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'wordcloud'"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting wordcloud\n",
+      "  Downloading wordcloud-1.9.3-cp311-cp311-win_amd64.whl.metadata (3.5 kB)\n",
+      "Requirement already satisfied: numpy>=1.6.1 in c:\\python311\\lib\\site-packages (from wordcloud) (1.26.4)\n",
+      "Requirement already satisfied: pillow in c:\\python311\\lib\\site-packages (from wordcloud) (10.2.0)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\winto\\appdata\\roaming\\python\\python311\\site-packages (from wordcloud) (3.8.4)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\winto\\appdata\\roaming\\python\\python311\\site-packages (from matplotlib->wordcloud) (1.2.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\winto\\appdata\\roaming\\python\\python311\\site-packages (from matplotlib->wordcloud) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\python311\\lib\\site-packages (from matplotlib->wordcloud) (4.51.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\python311\\lib\\site-packages (from matplotlib->wordcloud) (1.4.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\winto\\appdata\\roaming\\python\\python311\\site-packages (from matplotlib->wordcloud) (24.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\python311\\lib\\site-packages (from matplotlib->wordcloud) (3.1.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\winto\\appdata\\roaming\\python\\python311\\site-packages (from matplotlib->wordcloud) (2.9.0.post0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\winto\\appdata\\roaming\\python\\python311\\site-packages (from python-dateutil>=2.7->matplotlib->wordcloud) (1.16.0)\n",
+      "Downloading wordcloud-1.9.3-cp311-cp311-win_amd64.whl (300 kB)\n",
+      "   ---------------------------------------- 0.0/300.2 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 300.2/300.2 kB 9.4 MB/s eta 0:00:00\n",
+      "Installing collected packages: wordcloud\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  WARNING: Failed to write executable - trying to use .deleteme logic\n",
+      "ERROR: Could not install packages due to an OSError: [WinError 2] The system cannot find the file specified: 'c:\\\\Python311\\\\Scripts\\\\wordcloud_cli.exe' -> 'c:\\\\Python311\\\\Scripts\\\\wordcloud_cli.exe.deleteme'\n",
+      "\n"
+     ]
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%pip install wordcloud\n",
+    "from wordcloud import WordCloud\n",
+    "\n",
     "# Driver program\n",
     "print(\"Neural Sentiment Analysis of COVID-19 Tweets with Deep LSTM\")\n",
     "print(\"\\n------Available Options------\")\n",
@@ -833,32 +873,24 @@
     "print(\"\\nPlease select an option from the above:\")\n",
     "\n",
     "sample_1 = 'Many lost their jobs because of covid and it is highly dangerous'\n",
-    "sentiment(net, sample_1)\n",
-    "    \n",
-    "sample_2 = 'I am happy that my family members are safe in this tough times'\n",
-    "sentiment(net, sample_2)\n",
     "\n",
-    "\"\"\"\n",
-    "while(True):\n",
-    "    choice = int(input())\n",
-    "\n",
-    "    if choice == 1:\n",
-    "        sample_1 = 'Many lost their jobs because of covid and it is highly dangerous'\n",
-    "        sentiment(net, sample_1)\n",
-    "    \n",
-    "        sample_2 = 'I am happy that my family members are safe in this tough times'\n",
-    "        sentiment(net, sample_2)\n",
-    "    \n",
-    "    elif choice == 2:\n",
-    "        print(\"\\nPlease enter a sentence/tweet:\")\n",
-    "        user_input = input()\n",
-    "        sentiment(net, user_input)\n",
-    "    \n",
-    "    elif choice == 3:\n",
-    "        print(\"\\nExiting...\")\n",
-    "        break\n",
-    "        \n",
-    "\"\"\""
+    "results, word_collection = sentiment(net, sample_1)\n",
+    "sentiment_counts = pd.value_counts(results[\"Sentiment\"])\n",
+    "plt.figure(figsize=(6, 4))\n",
+    "sentiment_counts.plot(kind='bar', color=['green', 'red'])\n",
+    "plt.title('Sentiment Distribution')\n",
+    "plt.xlabel('Sentiment')\n",
+    "plt.ylabel('Number of Tweets')\n",
+    "plt.xticks(rotation=0)\n",
+    "plt.show()\n",
+    "plt.figure(figsize=(14, 7))\n",
+    "for i, sentiment in enumerate(['Positive', 'Negative'], 1):\n",
+    "    plt.subplot(1, 2, i)\n",
+    "    wordcloud = WordCloud(width=800, height=400, background_color='white').generate(' '.join(word_collection[sentiment]))\n",
+    "    plt.imshow(wordcloud, interpolation='bilinear')\n",
+    "    plt.title(f'{sentiment} Words')\n",
+    "    plt.axis('off')\n",
+    "plt.show()"
    ]
   }
  ],
