--- a/129/lstm_analysis_with_sklearn.ipynb
+++ b/129/lstm_analysis_with_sklearn.ipynb
@@ -51134,6 +51134,46 @@
     "print(\"Classification Report:\")\n",
     "print(class_rep)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to perform sentiment analysis on input text and return the predicted sentiment\n",
+    "def sentiment_analysis_input(net, text):\n",
+    "    # Preprocess input text\n",
+    "    processed_text = text_preprocessing(text)\n",
+    "    # Tokenize processed text\n",
+    "    tokenized_text = tokenize(processed_text)\n",
+    "    # Pad features\n",
+    "    padded_text = pad_features(tokenized_text, seq_length)\n",
+    "    feature_tensor = torch.from_numpy(padded_text)\n",
+    "\n",
+    "    if gpu_available:\n",
+    "        feature_tensor = feature_tensor.cuda()\n",
+    "\n",
+    "    batch_size = feature_tensor.size(0)\n",
+    "    h = net.init_hidden(batch_size)\n",
+    "    output, h = net(feature_tensor, h)\n",
+    "    predicted_sentiment = torch.round(output.squeeze())\n",
+    "\n",
+    "    sentiment = \"Positive\" if predicted_sentiment.item() == 1 else \"Negative\"\n",
+    "    \n",
+    "    return sentiment\n",
+    "\n",
+    "# Function to analyze sentiment of user input and return the result\n",
+    "def analyze_sentiment_input(input):\n",
+    "    result = sentiment_analysis_input(net, input)\n",
+    "    return result\n",
+    "\n",
+    "# Sample usage\n",
+    "prompt = \"i am very sad today.\"\n",
+    "sentiment_result = analyze_sentiment_input(prompt)\n",
+    "\n",
+    "print(f\"The user is '{sentiment_result}'. This is what they said {prompt}. Respond accordingly.\")\n"
+   ]
   }
  ],
  "metadata": {
